test/invalid/test03.01-explicit.asp
<% Option Explicit %>

<%

Dim DefVar

DefVar = "Hello There"

%><%=DefVar%><br>
<%

UnDefVar = "Hello George"

%>


